syntax = "proto3";

package  visualizer;

option go_package = "github.com/alexandrecolauto/gofka/proto/visualizer";

service VisualizerService{
    rpc Update(VisualizerRequest) returns (VisualizerResponse);
}

message VisualizerRequest {
    string node_type = 1;
    string action = 2;
    string target = 3;
    bytes data = 4;
}

message VisualizerResponse {
    bool success = 1;
}
